# Utils

./: .gitmodules  CMakeLists.txt  LICENSE
benchmark/: CMakeLists.txt
benchmark/Inc/: benchmark.h
benchmark/Src/: benchmark_dwt_m3.c
time/: CMakeLists.txt
time/system_time/: system_time.c  system_time.h
time/timestamp/: timestamp.c  timestamp.h
